# slurm-factory

./: .commitlintrc.yml  .coverage  .gitignore  BUILDCACHE_FIX.md  BUILDCACHE_FIX_SUMMARY.md  COMPILER_BOOTSTRAP_FIX.md  Dockerfile.debug-mysql  Dockerfile.test-buildcache  Dockerfile.test-mysql  Dockerfile.test-mysql-fix  Dockerfile.test-spack-concretize  FIXES_SUMMARY.md  LICENSE  LICENSE_HEADERS_SUMMARY.md  README.md  RELOCATABILITY_FEATURES.md  VERIFY_GPG_SIGNATURE.md  builder_back.py  con.py  justfile  myfile.sh  pyproject.toml  sp.py  spack.yaml  spack_back_1.yaml  test-buildcache.Dockerfile  test-compiler-detection-fallback.Dockerfile  test-compiler-detection.Dockerfile  test_compiler_config.sh  test_final_improvements.py  test_final_validation.py  test_modulefile_template.py  test_relocatability_features.py  test_surgical_fixes.py
.github/: copilot-instructions.md
.github/workflows/: README.md  build-and-publish-all-packages.yml  build-and-publish-all.yml  build-and-publish-compiler-buildcache.yml  build-and-publish-compiler.yml  build-and-publish-os-slurm-deps.yml  build-and-publish-slurm-all.yml  build-and-publish-slurm-dependencies.yml  build-and-publish-slurm-deps-all-compilers.yml  build-and-publish-slurm-tarball.yml  build-and-publish-slurm.yml  ci.yml  copilot-setup-steps.yml  publish.yml  update-docs.yml
data/: lxd-profile.yaml
data/patches/: package.py  slurm_prefix.patch
data/slurm_assets/: slurm_install.sh
data/slurm_assets/defaults/: slurmctld  slurmd  slurmdbd  slurmrestd
data/slurm_assets/mysql/: slurm.cnf
data/slurm_assets/nsswitch/: nsswitch.conf
data/slurm_assets/profile.d/: z00_lmod.sh
data/slurm_assets/slurm/: acct_gather.conf  cgroup.conf  oci.conf  slurm.conf  slurmdbd.conf
data/slurm_assets/ssh/: vantage_sshd.conf
data/slurm_assets/sssd/: sssd.conf
data/slurm_assets/systemd/: slurmctld.service  slurmd.service  slurmdbd.service  slurmrestd.service
data/slurm_assets/tmpfiles.d/: slurmctld.conf  slurmd.conf  slurmdbd.conf  slurmrestd.conf
data/templates/: compiler_modulefile.lua  core_modulefile.lua  relocatable_modulefile.lua
docs/: BUILDCACHE_SIGNING_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  README.md  SIGNING_QUICK_REFERENCE.md  _config.yml  api-reference.md  architecture.md  compiler_wrapper_none_bug.md  contact.md  contributing.md  deployment.md  examples.md  index.md  installation.md  optimization.md  overview.md  troubleshooting.md
docs/_data/: project.yml
docs/_layouts/: default.html
docusaurus/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docusaurus/data/: version.yml
docusaurus/docs/: api-reference.md  architecture.md  build-artifacts.md  contact.md  contributing.md  deployment.md  examples.md  github-actions.md  index.md  index.mdx  infrastructure.md  installation.md  installing-slurm-from-buildcache.md  installing-slurm-from-tarball.md  optimization.md  overview.md  packages.md  packages.mdx  slurm-factory-spack-build-cache.md  spack-repo.md  troubleshooting.md  verify-gpg-signature.md
docusaurus/src/components/SpackCacheBrowser/: index.tsx  styles.module.css
extras/: curl_upstream_spack_source.py
infrastructure/: .gitignore  DEPLOYMENT_SUMMARY.md  README.md  app.py  cdk.json  pyproject.toml  requirements.txt  s3-bucket-policy.json
infrastructure/examples/: README.md  github_actions_workflow.py
infrastructure/infrastructure/: __init__.py  cli.py  stacks.py
notes/: INFLUXDB_PLUGIN_FIX.md
patches/: 0001-Add-compiler_wrapper-package-with-better-None-handli.patch  README.md  spack-compiler-wrapper-none-check.patch
scripts/: generate_packages_page.py  migrate-buildcache.sh  test-buildcache-deps.sh  test-tarball.sh  test_spack_concretization.py  update_docs_version.py
slurm_factory/: __init__.py  builder.py  config.py  constants.py  exceptions.py  main.py  spack_yaml.py  utils.py
slurm_factory/builders/: slurm_builder.py  toolchain_builder.py
slurm_factory/commands/build_slurm/: __init__.py  build.py
slurm_factory/commands/build_toolchain/: __init__.py  build.py
templates/: relocatable_modulefile.lua
tests/: Dockerfile.test-buildcache  Dockerfile.test-buildcache-deps  Dockerfile.test-tarball  __init__.py  test_buildcache_gpg.py  test_buildcache_index_update.py  test_builder.py  test_compiler_bootstrap.py  test_config.py  test_constants.py  test_enhanced_features.py  test_exceptions.py  test_flex_inclusion.py  test_gcc_buildcache_integration.py  test_gcc_languages_fix.py  test_gpg_integration.py  test_libfl_build_dependency.py  test_libmd_runtime_dependency.py  test_main.py  test_spack_yaml.py  test_utils.py
tests/dockerfiles/: Dockerfile.tarball-centos7  Dockerfile.tarball-rocky  Dockerfile.tarball-rocky8  Dockerfile.tarball-rocky9  Dockerfile.tarball-ubuntu  Dockerfile.tarball-ubuntu18.04  Dockerfile.tarball-ubuntu20.04  Dockerfile.tarball-ubuntu22.04  Dockerfile.tarball-ubuntu24.04  Dockerfile.tarball-ubuntu26.04  test-tarball.sh
tests/integration/: __init__.py  test_buildcache_gpg.py  test_buildcache_index_update.py  test_compiler_bootstrap.py  test_enhanced_features.py  test_gcc_languages_fix.py  test_gpg_integration.py  test_libfl_build_dependency.py  test_libmd_runtime_dependency.py
tests/unit/: __init__.py  test_builder.py  test_config.py  test_constants.py  test_main.py  test_slurm_builder_debug_bundle.py  test_slurm_builder_dockerfile.py  test_spack_yaml.py  test_utils.py
tmp/: spack.yaml  spack_back.yaml
tmp/.spack-env/repos/builtin/spack_repo/builtin/: repo.yaml
tmp2/: spack.yaml
tmp2/.spack-env/: view
tmp2/.spack-env/._view/yzgnelrwaiwpmovecu4aqoewzrll5ydu/.spack/gcc/: install_environment.json  install_manifest.json  install_times.json  spack-build-env.txt  spec.json  (+1 more)
tmp2/.spack-env/._view/yzgnelrwaiwpmovecu4aqoewzrll5ydu/.spack/gcc-runtime/: install_environment.json  install_manifest.json  install_times.json  spack-build-env.txt  spec.json
tmp2/.spack-env/._view/yzgnelrwaiwpmovecu4aqoewzrll5ydu/include/: gmp.h  gmpxx.h  mpc.h  mpf2mpfr.h  mpfr.h  zconf.h  zdict.h  zlib.h  zlib_name_mangling.h  zstd.h  zstd_errors.h
(+934 files in other folders)
