[project]
name = "slurm-factory-infrastructure"
version = "0.1.0"
description = "Infrastructure as Code for slurm-factory using AWS CDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
infra = "infrastructure.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infrastructure"]
